--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.7.2",
-    "nodemon": "^2.0.14",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.14"
   }
 }
