--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,9 @@
   "author": "Daria Strokach",
   "license": "ISC",
   "dependencies": {
+    "@graphql-yoga/node": "^0.1.0-alpha.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-graphql": "^0.12.0",
     "graphql": "^15.7.2",
     "uuid": "^8.3.2"
   },
