--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@apollo/client": "^3.5.9",
+    "@apollo/client": "^3.5.10",
+    "@apollo/link-ws": "^2.0.0-beta.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -19,11 +20,11 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.2",
     "graphql": "^16.0.1",
-    "graphql-ws": "^5.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "subscriptions-transport-ws": "^0.11.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
