--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "@graphql-yoga/node": "^0.1.0-alpha.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "graphql": "^15.7.2",
+    "graphql": "^16.3.0",
+    "subscriptions-transport-ws": "^0.11.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
