--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "type": "git",
     "url": "git+https://github.com/Azgaar/pizza-graphql.git"
   },
-  "author": "Azgaar (Max Ganiev), Daria Strokach",
+  "author": "Max Ganiev, Daria Strokach",
   "dependencies": {}
 }
