--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "yarn": "1.x"
   },
   "scripts": {
-    "build": "cd client/ && yarn && yarn run build && cd ../server && npm install",
+    "build": "cd server/ && npm install",
     "start": "node server/index.js"
   },
   "repository": {
