--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "yarn": "1.x"
   },
   "scripts": {
-    "build": "cd server/ && npm install",
-    "start": "node server/index.js"
+    "build": "cd api/ && npm install",
+    "start": "node api/index.js"
   },
   "repository": {
     "type": "git",
