--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "@graphql-yoga/node": "^0.1.0-alpha.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "graphql": "^16.0.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
